# runtest_on_dj_packages

./: .coveragerc  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
demo/: admin.py  data_sources.py  models.py  urls.py  views.py
demo/migrations/: 0001_initial.py  0002_alter_person_color.py
demo/templates/demo/: person_detail.html  person_form.html  person_list.html
