[tool.poetry]
name = "runtest_django_packages"
version = "0.1.0"
description = ""
authors = ["Swann <swann.bouviermuller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "*"
psycopg2 = "*"
mistletoe = "^0.8.2"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
django-debug-toolbar = "*"
django-extensions = "*"
flake8 = "*"
flake8-bugbear = "*"
pytest-django = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
